# depRL

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  installation_instructions.txt  pip_requirements.txt  poetry.toml  prepare_commit.sh  pyproject.toml  requirements.txt  scone_walk.json
.github/workflows/: build.yml  python-app.yml
deprl/: __init__.py  custom_agents.py  custom_distributed.py  custom_mpo_torch.py  custom_test_environment.py  custom_torso.py  custom_trainer.py  dep_controller.py  log.py  main.py  play.py  plot.py  train.py
deprl/custom_replay_buffers/: __init__.py  action_cost_replay.py
deprl/env_wrappers/: __init__.py  dm_wrapper.py  gym_wrapper.py  scone_wrapper.py  wrappers.py
deprl/param_files/: default_agents.json  default_tonic.json
deprl/utils/: __init__.py  analysis_utils.py  load_utils.py  utils.py
docs/: requirements.txt
docs/source/: conf.py  config_files.rst  hyfydy_baselines.rst  index.rst  installation.rst  loading_checkpoints.rst  myo_baselines.rst  usage.rst
example/: example_deprl.py  sconegym_example.py
examples/: example_baseline_different_environment.py  example_deprl.py  example_load_baseline.py  example_load_baseline_hyfydy.py  example_load_baseline_myosuite.py  example_only_dep_myosuite.py  example_only_dep_scone.py
experiments/: deprecated_humanreacher_pointing.json  humanreacher_pointing.json  ostrich_dep_running.json  scone_walk.json
experiments/deprl_paper/: humanreacher_pointing.json  ostrich_dep_running.json
experiments/hyfydy/: scone_run_h0918.yaml  scone_run_h1622.yaml  scone_run_h2190.yaml  scone_walk.json  scone_walk.yaml  scone_walk_h0918.yaml  scone_walk_h1622.yaml  scone_walk_h2190.yaml  scone_walk_opensim_h0918.yaml
experiments/myosuite_training_files/: myoChaseTag.json  myoChaseTag.yaml  myoLegWalk.json  myoLegWalk.yaml  myoRelocate.json  myoRelocate.yaml  myoRunTrack.yaml  render_baselines.py
local_tests/: test_scone.py
play_files/: play_dep_dmcontrol_quadruped.sh  play_dep_humanreacher.sh  play_dep_ostrich.sh
tests/: test_baselines.py  test_deprl.py  test_myosuite_baselines.py  test_temp_scone.py
tests/test_files/: test_settings.json  test_settings_load.json  test_settings_load_no_resume.json  test_settings_load_resume.json
