[tool.poetry]
name = "deprl"
version = "0.1.2"
description = "DEP-RL, a method for robust control of musculoskeletal systems."
authors = ["Pierre Schumacher <pierre.schumacher@tuebingen.mpg.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pyyaml = "^6.0"
numpy = "^1.22.4"
termcolor = "^2.2.0"
torch = ">=1.13.1"
jaxlib = "^0.4.7"
jax = "^0.4.8"
gym = "0.13.0"
pandas = "^2.0.1"
gdown = "^4.7.1"

[tool.poetry.group.dev.dependencies]
pudb = "*"
pre-commit = "*"
wandb = "^0.13.11"
ostrichrl = {git = "https://github.com/P-Schumacher/ostrichrl.git", branch="fix/setuptools"}
warmup = {git = "https://github.com/P-Schumacher/warmup.git"}
gym = "0.13.0"
free-mujoco-py = "*"
myosuite = {path = "../myosuite", develop = true}

[tool.poetry.scripts]
log = "deprl.log:main"
plot = "deprl.plot:main"

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
profile = "black"
filter_files = "True"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
ignore = ["C901", "F403", "F405"]
line-length = 120
target-version= "py310"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
