[tool.poetry]
name = "deprl"
version = "0.3.2"
description = "DEP-RL, a method for robust control of musculoskeletal systems."
authors = ["Pierre Schumacher <pierre.schumacher@tuebingen.mpg.de>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8, <3.12"
pyyaml = "^6.0"
numpy = "^1.22.4"
termcolor = "^2.2.0"
pandas = "^2.0.1"
gdown = "^4.7.1"
# torch = {version = "^2.0.1+cpu", source = "pytorch-cpu"}
torch = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pudb = "*"
pre-commit = "*"
warmup = {git = "https://github.com/P-Schumacher/warmup.git"}
gym = "0.13.0"
wandb = "^0.15.4"
sphinx = "5.3.0"
sphinx-rtd-theme = "^1.2.2"
pytest = "^7.4.0"
sphinx-copybutton = "^0.5.2"
pytest-order = "^1.1.0"
myosuite = "^2.1.3"


[tool.poetry.scripts]
log = "deprl.log:main"
plot = "deprl.plot:main"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.black]
line-length = 79
target-version = ["py310"]


[tool.isort]
profile = "black"
filter_files = "True"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.ruff]
ignore = ["C901", "F403", "F405"]
line-length = 120
target-version= "py310"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
